サンプルアップデート

--- a/app/source/data/pages.yaml
+++ b/app/source/data/pages.yaml
@@ -42,6 +42,10 @@ production:
     description: |
       当時の400ccクラスは直列2気筒エンジンが主流であり、4気筒エンジンを搭載する本モデルはドリームCB350FOURベースに徹底的なコストダウンを図って開発されたにもかかわらず、免許制度の問題から2種類のエンジン・フレーム・スペックはもとより、日本国内仕様ではカラーバリエーションも追加したため逆に高コストとなったことから、日本国内仕様は1977年に低コストを前提にした2気筒エンジンを搭載する次期モデルホークシリーズへモデルチェンジされ販売終了。海外向け仕様は継続生産されたが、最終モデルではタンクに子持ちラインが入ると共に特徴であったリンク式バックステップが廃止されるなどコストダウンが実施され、1977年モデルを最後に生産終了した。
 
+  # - name: zephyr400
+  #   maker: kawasaki
+  #   description: |
+  #     1989年、レーサーレプリカ全盛期に、カウルなしの懐古的なスタイルを前面に押して登場した。これがフルカウル以外の選択肢を求めるユーザーに受け爆発的な売れ行きを見せ、「ネイキッドブーム」の立役者となる。メーカーによる自主規制の上限値を意識しない出力設定は、過熱しすぎていたカタログスペック競争に一石を投じることとなり、ユーザーのバイク選びのスタイルが変わるターニングポイントとなった。
 
 
 
