--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ect-sample",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "gulp ect sample",
   "main": "index.js",
   "scripts": {
@@ -20,8 +20,16 @@
     "browser-sync": "^2.14.0",
     "coffee-script": "^1.10.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-coffee": "^2.3.2",
+    "gulp-cssmin": "^0.1.7",
     "gulp-ect": "^1.3.1",
     "gulp-ect-simple": "^0.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
     "js-yaml": "^3.6.1",
     "require-dir": "^0.3.0"
   }
